logs/dag_id=dag_id_3/run_id=manual__2024-03-19T09:20:58.576760+00:00/task_id=show_databases/attempt=1.log
[2024-03-19T11:21:01.994+0200] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_id_3.show_databases manual__2024-03-19T09:20:58.576760+00:00 [queued]>
[2024-03-19T11:21:02.026+0200] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_id_3.show_databases manual__2024-03-19T09:20:58.576760+00:00 [queued]>
[2024-03-19T11:21:02.026+0200] {taskinstance.py:2193} INFO - Starting attempt 1 of 1
[2024-03-19T11:21:02.046+0200] {taskinstance.py:2214} INFO - Executing <Task(PostgresOperator): show_databases> on 2024-03-19 09:20:58.576760+00:00
[2024-03-19T11:21:02.051+0200] {standard_task_runner.py:60} INFO - Started process 12084 to run task
[2024-03-19T11:21:02.058+0200] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'dag_id_3', 'show_databases', 'manual__2024-03-19T09:20:58.576760+00:00', '--job-id', '317', '--raw', '--subdir', 'DAGS_FOLDER/jobs_dag.py', '--cfg-path', '/var/folders/t6/vwjsg0jx26jcjdwn_gxhbjzc0000gp/T/tmpg7m6m8gj']
[2024-03-19T11:21:02.061+0200] {standard_task_runner.py:88} INFO - Job 317: Subtask show_databases
[2024-03-19T11:21:02.193+0200] {task_command.py:423} INFO - Running <TaskInstance: dag_id_3.show_databases manual__2024-03-19T09:20:58.576760+00:00 [running]> on host C9843
[2024-03-19T11:21:02.383+0200] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='dag_id_3' AIRFLOW_CTX_TASK_ID='show_databases' AIRFLOW_CTX_EXECUTION_DATE='2024-03-19T09:20:58.576760+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-03-19T09:20:58.576760+00:00'
[2024-03-19T11:21:02.385+0200] {sql.py:276} INFO - Executing: \l
[2024-03-19T11:21:02.396+0200] {base.py:83} INFO - Using connection ID 'Postgres_db' for task execution.
[2024-03-19T11:21:02.443+0200] {base.py:83} INFO - Using connection ID 'Postgres_db' for task execution.
[2024-03-19T11:21:02.468+0200] {sql.py:457} INFO - Running statement: \l, parameters: [77539455, 'None', datetime.datetime(2024, 3, 19, 11, 21, 1, 149945)]
[2024-03-19T11:21:02.470+0200] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/usr/local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/usr/local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/usr/local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/usr/local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/usr/local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 460, in _run_command
    cur.execute(sql_statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "\"
LINE 1: \l
        ^

[2024-03-19T11:21:02.530+0200] {taskinstance.py:1149} INFO - Marking task as FAILED. dag_id=dag_id_3, task_id=show_databases, execution_date=20240319T092058, start_date=20240319T092101, end_date=20240319T092102
[2024-03-19T11:21:02.570+0200] {standard_task_runner.py:107} ERROR - Failed to execute job 317 for task show_databases (syntax error at or near "\"
LINE 1: \l
        ^
; 12084)
[2024-03-19T11:21:02.608+0200] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-19T11:21:02.640+0200] {logging_mixin.py:188} WARNING - /usr/local/lib/python3.8/site-packages/airflow/models/baseoperator.py:1201 AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `airflow.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
[2024-03-19T11:21:02.676+0200] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
